# clinvar-xml-tab

./: .gitignore  Cargo.toml  README.md  clinvar_record.tsv  test.tsv  vcf_header.txt
src/: cli.rs  clinvar_record.rs  clinvar_set.xml  clinvar_set_serde.rs  clinvar_set_serde_auto.rs  clinvar_set_serde_auto_new.rs  clinvarset_new.xml  error.rs  json_flatten.rs  lib.rs  main.rs  utils.rs
src/clinvar/: mod.rs  record.rs  record_handler.rs
src/xml/: handler.rs  mod.rs  reader.rs
