[package]
name = "clinvar-xml-tab"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
bzip2 = "0.5.0"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
flate2 = "1.0.35"
quick-xml = { version = "0.37.1", features = ["serde", "serialize"] }
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.8"
xz2 = "0.1.7"
