[package]
name = "clinvar-xml-tab"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
bzip2 = "0.5.0"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
csv = "1.3.1"
flate2 = "1.0.35"
home = "0.5.11"
quick-xml = { version = "0.37.1", features = ["serde", "serialize"] }
roxmltree = "0.20.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.8"
xz2 = "0.1.7"
